--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/schematics": "^10.0.0",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
