--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "migration:revert": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "@casl/ability": "^6.7.1",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
@@ -35,12 +38,14 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "clear": "^0.1.0",
+    "graphql": "^16.8.1",
     "mysql2": "^3.9.7",
     "nestjs-typeorm-paginate": "^4.0.4",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "speakeasy": "^2.0.0",
+    "ts-morph": "^22.0.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
